--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,117 +1,36 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  min-height: 100vh;
-  padding: 0 0.5rem;
+/* サイドバーの基本スタイル */
+.sidebar {
+  width: 20%;
+  min-height: 100vh; /* 画面の高さを全て使う */
+  padding: 1rem;
+  background-color: #d0b4b4; /* グレイッシュな背景色 */
+  border-right: 1px solid #ddd; /* 右側の境界線 */
+  box-shadow: 2px 0 5px rgb(37 34 50 / 10%); /* 右側に微妙な影をつける */
+}
+
+/* サイドバーの項目スタイル */
+.sidebarItem {
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  color: #333; /* テキストの色 */
+  cursor: pointer;
+  border-radius: 5px; /* 角の丸み */
+  transition: background-color 0.3s; /* 背景色の変更をスムーズにする */
+}
+
+/* ホバーエフェクト */
+.sidebarItem:hover {
+  background-color: #e5e5e5;
+}
+
+/* アクティブな項目のスタイル */
+.sidebarItem.active {
+  font-weight: bold; /* テキストを太くする */
+  background-color: #d4e1ff; /* アクティブな項目の背景色 */
 }
 
 .main {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 5rem 0;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-}
-
-.footer > a {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  justify-content: center;
-}
-
-.title {
-  margin: 0;
-  font-size: 4rem;
-  line-height: 1.15;
-  text-align: center;
-}
-
-.title > a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title > a:hover,
-.title > a:focus,
-.title > a:active {
-  text-decoration: underline;
-}
-
-.description {
-  font-size: 1.5rem;
-  line-height: 1.5;
-  text-align: center;
-}
-
-.code {
-  padding: 0.75rem;
-  font-family: Menlo, 'Monaco, Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono',
-    'Bitstream Vera Sans Mono', 'Courier New', monospace;
-  font-size: 1.1rem;
-  border-radius: 5px;
-}
-
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-@media (width <= 600px) {
-  .grid {
-    flex-direction: column;
-    width: 100%;
-  }
-}
-
-.card {
-  width: 45%;
-  padding: 1.5rem;
-  margin: 1rem;
-  color: inherit;
-  text-align: left;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card > h2 {
-  margin: 0 0 1rem;
-  font-size: 1.5rem;
-}
-
-.card > p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  width: 100vw;
+  height: 100vh;
+  background-color: #f1ecec;
 }
