--- a/src/components/UseWisra/UseWisraComponent.module.css
+++ b/src/components/UseWisra/UseWisraComponent.module.css
@@ -1,35 +1,36 @@
-.servoContainer {
+.instructions {
   padding: 20px;
+  margin-top: 20px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgb(0 0 0 / 10%);
 }
 
-.servoTitle {
+.instructions h2 {
+  padding-bottom: 10px;
   margin-bottom: 15px;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 22px;
   color: #333;
+  border-bottom: 2px solid #ddd;
 }
 
-.servoDescription {
-  margin-bottom: 20px;
+.instructions ol {
+  padding-left: 30px;
   font-size: 16px;
   color: #555;
+  list-style-type: decimal;
 }
 
-.servoCode {
-  padding: 15px;
-  font-family: 'Courier New', Courier, monospace;
-  color: #a5c955;
-  background-color: #282c34;
-  border-radius: 4px;
+.instructions li {
+  margin-bottom: 15px;
+  line-height: 1.6;
 }
 
-.servoImage {
-  max-width: 100%;
-  margin-top: 20px;
-  border: 1px solid #ccc;
+.instructions code {
+  padding: 2px 5px;
+  font-family: 'Courier New', monospace;
+  font-size: 15px;
+  background-color: #e6e6e6;
   border-radius: 4px;
 }
