--- a/src/components/UseWisra/UseWisraComponent.module.css
+++ b/src/components/UseWisra/UseWisraComponent.module.css
@@ -34,3 +34,66 @@
   background-color: #e6e6e6;
   border-radius: 4px;
 }
+
+.ledContainer {
+  /* padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px; */
+
+  padding: 20px;
+  margin-top: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgb(0 0 0 / 10%);
+}
+
+.ledTitle {
+  /* margin-bottom: 15px;
+  font-size: 24px;
+  color: #333;
+  border-bottom: 2px solid #ddd; */
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  font-size: 22px;
+  color: #333;
+  border-bottom: 2px solid #ddd;
+}
+
+.ledSubtitle {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #555;
+
+  /* padding-left: 30px;
+  font-size: 16px;
+  color: #555;
+  list-style-type: decimal; */
+}
+
+.codeBlock {
+  padding: 10px;
+  font-family: 'Courier New', monospace;
+  font-size: 15px;
+  background-color: #e6e6e6;
+  border-radius: 4px;
+
+  /* padding: 2px 5px;
+  font-family: 'Courier New', monospace;
+  font-size: 15px;
+  background-color: #e6e6e6;
+  border-radius: 4px; */
+}
+
+.note {
+  margin-top: 20px;
+  font-weight: bold;
+  color: red;
+}
+
+.gazou {
+  width: 533px;
+  height: 483px;
+  background: url('../../assets/images/led-scene-0.gif') no-repeat;
+}
