--- a/src/components/Index/IndexComponent.module.css
+++ b/src/components/Index/IndexComponent.module.css
@@ -25,8 +25,9 @@
 
 .code {
   display: block;
-  padding: 10px 15px;
-  margin: 10px 0;
-  background-color: #f7f7f7;
-  border: 1px solid #ccc;
+  padding: 10px;
+  font-family: 'Courier New', monospace;
+  font-size: 15px;
+  background-color: #e6e6e6;
+  border-radius: 4px;
 }
