--- a/src/components/LED/LEDComponent.module.css
+++ b/src/components/LED/LEDComponent.module.css
@@ -18,9 +18,12 @@
 }
 
 .codeBlock {
+  display: block;
   padding: 10px;
-  background-color: #f5f5f5;
-  border-radius: 5px;
+  font-family: 'Courier New', monospace;
+  font-size: 15px;
+  background-color: #e6e6e6;
+  border-radius: 4px;
 }
 
 .note {
