--- a/src/components/UseWisra/UseWisraComponent.module.css
+++ b/src/components/UseWisra/UseWisraComponent.module.css
@@ -1,4 +1,42 @@
+/* styles.module.css */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Adjust for the desired spacing between items */
+  align-items: start;
+}
+
+.item {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.inputNumber {
+  padding: 0.5rem;
+  margin-left: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.button {
+  padding: 0.75rem 1.25rem;
+  margin-top: 1rem;
+  color: white;
+  cursor: pointer;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
 .instructions {
+  width: 100%;
   padding: 20px;
   margin-top: 20px;
   background-color: #f9f9f9;
@@ -39,7 +77,7 @@
   /* padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px; */
-
+  width: 100%;
   padding: 20px;
   margin-top: 20px;
   background-color: #f9f9f9;
