--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,3 +1,34 @@
+.app {
+  height: 100vh; /* この部分は適宜調整してください */
+}
+
+.headerBar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000;
+  display: none; /* 初めは非表示 */
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem;
+  background-color: rgb(0 0 0 / 80%);
+}
+
+.headerBar a {
+  display: flex;
+  align-items: center;
+  margin: 0 1rem;
+  color: white;
+  text-decoration: none;
+}
+
+.headerBar img.icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 0.5rem;
+}
+
 /* サイドバーの基本スタイル */
 .sidebar {
   width: 15vw;
